[gd_scene load_steps=31 format=3 uid="uid://5g1k55gpynrt"]

[ext_resource type="Script" path="res://Scripts/Entity/Diver/Diver.gd" id="1_1l6ma"]
[ext_resource type="Script" uid="uid://bd4wsydtqv77j" path="res://Scripts/Entity/Diver/DiverMovement.gd" id="2_lxvv3"]
[ext_resource type="Script" path="res://Scripts/Entity/Diver/DiverAnimation.gd" id="3_k6pml"]
[ext_resource type="Texture2D" uid="uid://bbcjmvub6x46b" path="res://Assets/Art/Sprites/Player/PlayerSkin.png" id="4_do014"]
[ext_resource type="Script" path="res://Scripts/Entity/Diver/DiverCombat.gd" id="5_mjta2"]
[ext_resource type="Script" uid="uid://dke8ns1faaefs" path="res://Scripts/Components/Misc/HealthComponent.gd" id="6_dvqx5"]
[ext_resource type="Script" uid="uid://g620r3rick6s" path="res://Scripts/Components/Hitbox/HurtboxComponent.gd" id="7_3b7lw"]
[ext_resource type="Script" uid="uid://coa0p5vrelt4" path="res://Scripts/Components/Hitbox/AttackBoxComponent.gd" id="8_spc27"]
[ext_resource type="Script" path="res://Scripts/Entity/Diver/DiverFlashlight.gd" id="9_xqhlv"]
[ext_resource type="Texture2D" uid="uid://bfoc8j7in635n" path="res://Assets/Art/Sprites/Player/FlashLightPlaceholder.png" id="10_qg316"]
[ext_resource type="Texture2D" uid="uid://cwpcvx4q0j1m" path="res://Assets/Art/WhiteBlock.png" id="12_u28jr"]
[ext_resource type="Script" uid="uid://c1psbyqa4c16x" path="res://Scripts/Components/Misc/BuoyancyComponent.gd" id="13_arg6r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ghsq1"]
radius = 20.0
height = 100.0

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_v7jax"]
target_nodepath = NodePath("../ArmIkTarget1")
joint_one_bone_idx = 2
joint_one_bone2d_node = NodePath("Torso/UpperArm1")
joint_two_bone_idx = 3
joint_two_bone2d_node = NodePath("Torso/UpperArm1/Forearm1")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_78rlc"]
target_nodepath = NodePath("../ArmIkTarget2")
joint_one_bone_idx = 4
joint_one_bone2d_node = NodePath("Torso/UpperArm2")
joint_two_bone_idx = 5
joint_two_bone2d_node = NodePath("Torso/UpperArm2/Forearm2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_ybnnp"]
target_nodepath = NodePath("../LegIkTarget1")
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Torso/Thigh1")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Torso/Thigh1/Calf1")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_db2b6"]
target_nodepath = NodePath("../LegIkTarget2")
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("Torso/Thigh2")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("Torso/Thigh2/Calf2")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_xgw1b"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_v7jax")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_78rlc")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_ybnnp")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_db2b6")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_p7tt7"]
polygon = PackedVector2Array(-16, -17, 16, -17, 16, 15, -16, 15)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_k7w8u"]
polygon = PackedVector2Array(-7.99992, 23, -8.00009, -25, 7.99991, -25, 7.00008, 23)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_u101i"]
polygon = PackedVector2Array(159.99, 32.25, 160.99, 79.25, 174.99, 80.25, 174.99, 33.25)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_5lcxe"]
polygon = PackedVector2Array(6.99991, 24, -8.00009, 24, -7.99991, -24, 7.00009, -24)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_uacx1"]
polygon = PackedVector2Array(-6.99992, 23, -8.00007, -20, 7.99993, -20, 8.00008, 23)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_e2u5c"]
polygon = PackedVector2Array(-8, -32, 9, -32, 9, 32, -7, 32)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xwppb"]
polygon = PackedVector2Array(8, -32, -8, -32, -7, 28, 8, 28)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_v5vmu"]
polygon = PackedVector2Array(-8, -31, 8, -31, 8, 33, -8, 33)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4oaia"]
polygon = PackedVector2Array(-28, -31, -12, -31, -12, -90, -28, -90)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_0ulgu"]
polygon = PackedVector2Array(13, 39, 13, -15, -21, -15, -19, 39)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wi5t0"]
radius = 26.0
height = 124.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ls4ex"]
radius = 48.0417

[node name="Diver" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_1l6ma")

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ghsq1")

[node name="Movement" type="Node2D" parent="."]
script = ExtResource("2_lxvv3")

[node name="RightWallRaycast" type="RayCast2D" parent="Movement"]
target_position = Vector2(48, 0)

[node name="LeftWallRaycast" type="RayCast2D" parent="Movement"]
target_position = Vector2(-48, 0)

[node name="Animation" type="Node2D" parent="."]
use_parent_material = true
script = ExtResource("3_k6pml")

[node name="Polygons" type="Node2D" parent="Animation"]
texture_filter = 1
use_parent_material = true
metadata/_edit_lock_ = true

[node name="UpperArm1" type="Polygon2D" parent="Animation/Polygons"]
texture_repeat = 1
use_parent_material = true
position = Vector2(39, -55)
rotation = 1.5708
offset = Vector2(-167.993, -54.2543)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(158.993, 31.2543, 158.659, 80.7521, 177.346, 80.8158, 177.027, 30.3031)
uv = PackedVector2Array(158.595, 31.1322, 158.659, 80.7521, 177.346, 80.8158, 177.027, 30.3031)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 2, 1)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(1, 1, 1, 1), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="Forearm1" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(81, -55)
rotation = 1.5708
offset = Vector2(-56, -41)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(46.9619, 15.5686, 46.2722, 65.2294, 65.5847, 65.2294, 65.1824, 14.8789)
uv = PackedVector2Array(46.9619, 15.5686, 46.2722, 65.2294, 65.5847, 65.2294, 65.1824, 14.8789)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 2, 1)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Forearm1", PackedFloat32Array(1, 1, 1, 1), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Forearm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="UpperArm2" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(-36, -55)
rotation = 1.5708
offset = Vector2(-88, -55)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(79.3924, 31.5152, 79.2307, 80.2438, 96.4576, 80.5269, 96.1745, 30.7873)
uv = PackedVector2Array(79.3924, 31.5152, 79.2307, 80.2438, 96.4576, 80.5269, 96.1745, 30.7873)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 2, 1)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(1, 1, 1, 1), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="Forearm2" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(-82, -55)
rotation = -1.5708
offset = Vector2(-56.0993, -40.2919)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(47.2143, 15.4954, 47.116, 64.5229, 64.703, 64.7194, 64.8013, 14.8567)
uv = PackedVector2Array(47.2143, 15.4954, 47.116, 64.5229, 64.703, 64.7194, 64.8013, 14.8567)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 2, 1)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Forearm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Forearm2", PackedFloat32Array(1, 1, 1, 1), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="Body" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(3, -39)
offset = Vector2(-131, -87)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(111.851, 70.0117, 118.529, 69.9653, 118.437, 62.9157, 136.617, 62.6838, 136.895, 69.8725, 145.151, 70.1044, 145.554, 129.179, 109.889, 129.179, 110.422, 69.7281, 127.376, 98.5866)
uv = PackedVector2Array(111.851, 70.0117, 118.529, 69.9653, 118.437, 62.9157, 136.617, 62.6838, 136.895, 69.8725, 145.151, 70.1044, 145.554, 129.179, 109.889, 129.179, 110.422, 69.7281, 127.376, 98.5866)
polygons = [PackedInt32Array(9, 1, 2), PackedInt32Array(9, 3, 2), PackedInt32Array(9, 4, 3), PackedInt32Array(9, 5, 4), PackedInt32Array(5, 6, 9), PackedInt32Array(9, 6, 7), PackedInt32Array(9, 8, 7), PackedInt32Array(9, 1, 0), PackedInt32Array(9, 0, 8)]
bones = ["Torso", PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1), "Torso/Head", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)]
internal_vertex_count = 1
metadata/_edit_lock_ = true

[node name="Thigh1" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(10, 24)
offset = Vector2(-168, -128)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(158.633, 95.1684, 158.633, 160.791, 176.701, 160.791, 176.756, 94.9467)
uv = PackedVector2Array(158.633, 95.1684, 158.633, 160.791, 176.701, 160.791, 176.756, 94.9467)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 2, 1)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(1, 1, 1, 1), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="Calf1" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(10, 82)
offset = Vector2(-152, -208)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(142.862, 174.73, 142.729, 241.366, 160.951, 241.056, 161.306, 174.863)
uv = PackedVector2Array(142.862, 174.73, 142.729, 241.366, 160.951, 241.056, 161.306, 174.863)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 2, 1)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(1, 1, 1, 1), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="Thigh2" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(-10, 23)
offset = Vector2(-88, -127)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(78.6611, 94.4609, 97.2638, 94.3767, 97.348, 161.128, 77.146, 160.875)
uv = PackedVector2Array(78.6611, 94.4609, 97.2638, 94.3767, 97.348, 161.128, 77.146, 160.875)
polygons = [PackedInt32Array(0, 1, 2), PackedInt32Array(0, 2, 3)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(1, 1, 1, 1), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="Calf2" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(-10, 81)
offset = Vector2(-104, -207)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(94.9078, 174.952, 94.6873, 240.382, 113.098, 240.382, 112.767, 174.952)
uv = PackedVector2Array(94.9078, 174.952, 94.6873, 240.382, 113.098, 240.382, 112.767, 174.952)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 2, 1)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(1, 1, 1, 1)]
metadata/_edit_lock_ = true

[node name="Head" type="Polygon2D" parent="Animation/Polygons"]
use_parent_material = true
position = Vector2(0, -71)
offset = Vector2(-128, -33)
texture = ExtResource("4_do014")
skeleton = NodePath("../../Skeleton")
polygon = PackedVector2Array(110.915, 15.1724, 111.101, 48.7448, 144.859, 49.1165, 144.921, 14.4291)
uv = PackedVector2Array(110.915, 15.1724, 111.101, 48.7448, 144.859, 49.1165, 144.921, 14.4291)
polygons = [PackedInt32Array(0, 3, 2), PackedInt32Array(0, 1, 2)]
bones = ["Torso", PackedFloat32Array(0, 0, 0, 0), "Torso/Head", PackedFloat32Array(1, 1, 1, 1), "Torso/UpperArm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm1/Arm1", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2", PackedFloat32Array(0, 0, 0, 0), "Torso/UpperArm2/Arm2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh1/Calf1", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2", PackedFloat32Array(0, 0, 0, 0), "Torso/Thigh2/Calf2", PackedFloat32Array(0, 0, 0, 0)]
metadata/_edit_lock_ = true

[node name="Skeleton" type="Skeleton2D" parent="Animation"]
use_parent_material = true
modification_stack = SubResource("SkeletonModificationStack2D_xgw1b")
metadata/_edit_lock_ = true

[node name="Torso" type="Bone2D" parent="Animation/Skeleton"]
use_parent_material = true
rest = Transform2D(1, 0, 0, 1, 0, 0)
metadata/_edit_lock_ = true

[node name="Head" type="Bone2D" parent="Animation/Skeleton/Torso"]
use_parent_material = true
position = Vector2(0, -62)
scale = Vector2(0.999997, 0.999997)
rest = Transform2D(1, 0, 0, 1, 0, -62)
auto_calculate_length_and_angle = false
length = 21.83
bone_angle = 270.0
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/Head"]
position = Vector2(0, -9.00003)
occluder = SubResource("OccluderPolygon2D_p7tt7")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="UpperArm1" type="Bone2D" parent="Animation/Skeleton/Torso"]
use_parent_material = true
position = Vector2(18, -55)
rotation = 2.08284
scale = Vector2(0.999944, 0.999944)
rest = Transform2D(0.964522, -0.264003, 0.264003, 0.964522, 18, -55)
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="Forearm1" type="Bone2D" parent="Animation/Skeleton/Torso/UpperArm1"]
use_parent_material = true
position = Vector2(40.2459, 12.0526)
rotation = -0.145358
scale = Vector2(1.08388, 1.00115)
skew = -5.6386e-05
rest = Transform2D(1.06785, -0.185714, 0.171539, 0.986349, 40.2459, 12.0526)
auto_calculate_length_and_angle = false
length = 43.402
bone_angle = 25.0
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/UpperArm1/Forearm1"]
position = Vector2(17.8001, 8.27792)
rotation = 1.96787
scale = Vector2(0.986316, 0.936111)
skew = 0.0597258
occluder = SubResource("OccluderPolygon2D_k7w8u")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/UpperArm1"]
position = Vector2(118.86, -140.568)
rotation = 1.85157
scale = Vector2(1.00006, 1.00006)
occluder = SubResource("OccluderPolygon2D_u101i")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="UpperArm2" type="Bone2D" parent="Animation/Skeleton/Torso"]
use_parent_material = true
position = Vector2(-18, -55)
rotation = 0.178766
rest = Transform2D(0.984064, 0.177815, -0.177815, 0.984064, -18, -55)
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="Forearm2" type="Bone2D" parent="Animation/Skeleton/Torso/UpperArm2"]
use_parent_material = true
position = Vector2(-41.3307, 7.46825)
rotation = 0.175939
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(0.984562, 0.175033, -0.175033, 0.984562, -41.3307, 7.46825)
auto_calculate_length_and_angle = false
length = 45.651
bone_angle = 159.0
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/UpperArm2/Forearm2"]
position = Vector2(-20.7467, 7.335)
rotation = -1.92815
occluder = SubResource("OccluderPolygon2D_5lcxe")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/UpperArm2"]
position = Vector2(-17.7418, 3.03804)
rotation = 1.40121
occluder = SubResource("OccluderPolygon2D_uacx1")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="Thigh1" type="Bone2D" parent="Animation/Skeleton/Torso"]
use_parent_material = true
position = Vector2(9, -4)
rest = Transform2D(1, 0, 0, 1, 9, -4)
auto_calculate_length_and_angle = false
length = 61.67
bone_angle = 90.0
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="Calf1" type="Bone2D" parent="Animation/Skeleton/Torso/Thigh1"]
use_parent_material = true
position = Vector2(2, 56)
scale = Vector2(0.996554, 1)
rest = Transform2D(0.996554, 0, 0, 1, 2, 56)
auto_calculate_length_and_angle = false
length = 57.824
bone_angle = 90.0
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/Thigh1/Calf1"]
position = Vector2(-1.69385, 30.0053)
rotation = 0.00797233
scale = Vector2(1.00346, 1)
skew = 5.51939e-05
occluder = SubResource("OccluderPolygon2D_e2u5c")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Animation/Skeleton/Torso/Thigh1"]
position = Vector2(0.775972, 28.0071)
rotation = 0.0079999
occluder = SubResource("OccluderPolygon2D_xwppb")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="Thigh2" type="Bone2D" parent="Animation/Skeleton/Torso"]
use_parent_material = true
position = Vector2(-9, -4)
rest = Transform2D(1, 0, 0, 1, -9, -4)
auto_calculate_length_and_angle = false
length = 58.705
bone_angle = 90.0
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="Calf2" type="Bone2D" parent="Animation/Skeleton/Torso/Thigh2"]
use_parent_material = true
position = Vector2(-2, 57)
rest = Transform2D(1, 0, 0, 1, -2, 57)
auto_calculate_length_and_angle = false
length = 59.378
bone_angle = 90.0
metadata/_edit_lock_ = true
metadata/_local_pose_override_enabled_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/Thigh2/Calf2"]
position = Vector2(1, 28)
occluder = SubResource("OccluderPolygon2D_v5vmu")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso/Thigh2"]
position = Vector2(19, 86)
occluder = SubResource("OccluderPolygon2D_4oaia")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Animation/Skeleton/Torso"]
position = Vector2(3, -39)
occluder = SubResource("OccluderPolygon2D_0ulgu")
occluder_light_mask = 2
metadata/_edit_lock_ = true

[node name="ArmIkTarget1" type="Node2D" parent="Animation"]
position = Vector2(116, -54)

[node name="ArmIkTarget2" type="Node2D" parent="Animation"]
position = Vector2(-127, -54)

[node name="LegIkTarget1" type="Node2D" parent="Animation"]
position = Vector2(10, 121)

[node name="LegIkTarget2" type="Node2D" parent="Animation"]
position = Vector2(-9, 122)

[node name="Arrow" type="Node2D" parent="Animation"]
use_parent_material = true

[node name="Polygon2D" type="Polygon2D" parent="Animation/Arrow"]
use_parent_material = true
position = Vector2(105, -1)
color = Color(1, 0, 1, 1)
polygon = PackedVector2Array(0, -7, 0, 8, 17, 0)

[node name="Health" type="Node2D" parent="."]
rotation = 0.000201209

[node name="HealthComponent" type="Node" parent="Health"]
script = ExtResource("6_dvqx5")
max_health = 5.0
component_container = NodePath("../..")

[node name="HurtboxComponent" type="Node" parent="Health"]
script = ExtResource("7_3b7lw")
attachable_health_component = NodePath("../HealthComponent")
hurtbox = NodePath("../PlayerHurtbox")
component_container = NodePath("../..")

[node name="PlayerHurtbox" type="Area2D" parent="Health"]
rotation = -0.000201209
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health/PlayerHurtbox"]
shape = SubResource("CapsuleShape2D_wi5t0")
debug_color = Color(0, 0.649449, 0.143183, 0.42)

[node name="Combat" type="Node2D" parent="."]
script = ExtResource("5_mjta2")

[node name="AttackBoxComponent" type="Node" parent="Combat"]
script = ExtResource("8_spc27")
knockback_velocity = 20.0
hurtbox = NodePath("AttackBox")
component_container = NodePath("../..")

[node name="AttackBox" type="Area2D" parent="Combat/AttackBoxComponent"]
rotation = 0.000201209
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Combat/AttackBoxComponent/AttackBox"]
position = Vector2(-0.0126762, -63)
shape = SubResource("CircleShape2D_ls4ex")
debug_color = Color(0.862718, 0.286752, 0.557432, 0.42)

[node name="Flashlight" type="Node2D" parent="."]
script = ExtResource("9_xqhlv")

[node name="Light" type="PointLight2D" parent="Flashlight"]
position = Vector2(2, -2)
range_item_cull_mask = 3
shadow_enabled = true
shadow_filter = 2
texture = ExtResource("10_qg316")
metadata/_edit_lock_ = true

[node name="PointLight2D" type="PointLight2D" parent="Flashlight"]
visible = false
position = Vector2(-2.99999, 16)
scale = Vector2(11.8, 26.8)
range_item_cull_mask = 3
texture = ExtResource("12_u28jr")

[node name="PlayerVisualDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerVisualDetectionArea"]
visible = false
shape = SubResource("CapsuleShape2D_wi5t0")

[node name="BuoyancyComponent" type="Node" parent="." node_paths=PackedStringArray("center_of_mass")]
script = ExtResource("13_arg6r")
center_of_mass = NodePath("..")
gravity = 20
buoyancy_accel = 1.0
max_buoyancy_vel = 10.0
component_container = NodePath("..")
